--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!-- <script src="praktice.js"></script> -->
 
     <!-- <script src="home_work1.js"></script> -->
-    <script src="home_work2.js"></script>
+    <!-- <script src="home_work2.js"></script> -->
+    <script src="home_work3.js"></script>
+
 
 </body>
 
