--- a/index.html
+++ b/index.html
@@ -4,19 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-
-    <!-- <script src="praktice.js"></script> -->
-
-    <!-- <script src="home_work1.js"></script> -->
-    <!-- <script src="home_work2.js"></script> -->
-    <!-- <script src="home_work3.js"></script> -->
-    <script src="home_work4.js"></script>
-
+    <div class="wrapper">
+        <h3>Задание 1</h3>
+        <div class="counter">
+            <input type="number" name="" id="" value="0" disabled>
+            <button class="increment">+</button>
+            <button class="decrement">-</button>
+        </div>
+        <br>
+        <br>
+        <h3>Задание 2</h3>
+        <div class="calculate">
+            <div class="getNumbers">
+                <input type="number" name="" id="1" placeholder="Введите первое значение">
+                <input type="number" name="" id="2" placeholder="Введите второе значение">
+                <h3 class="calculate__result">0</h3>
+            </div>
+            <div class="operations">
+                <button class="sum">Сложить: +</button>
+                <button class="difference">Вычесть: -</button>
+                <button class="multiplication">Умножить: *</button>
+                <button class="quotient">Разделить: /</button>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <h3>Задание 3</h3>
+    <div class="accept__value">
+        <!-- <h1 class="text"></h1> -->
+        <button class="accept">Нажми меня!</button>
+    </div>
+    </div>
 
 </body>
+<!-- <script src="praktice.js"></script> -->
+
+<!-- <script src="home_work1.js"></script> -->
+<!-- <script src="home_work2.js"></script> -->
+<!-- <script src="home_work3.js"></script> -->
+<!-- <script src="home_work4.js"></script> -->
+<script src="home_work5.js"></script>
 
 </html>
