--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 
@@ -32,23 +32,25 @@
                 <button class="quotient">Разделить: /</button>
             </div>
         </div>
-    </div>
-    <br>
-    <br>
-    <h3>Задание 3</h3>
-    <div class="accept__value">
-        <!-- <h1 class="text"></h1> -->
-        <button class="accept">Нажми меня!</button>
+
+        <br>
+        <br>
+        <h3>Задание 3</h3>
+        <div class="accept__value">
+            <!-- <h1 class="text"></h1> -->
+            <button class="accept">Нажми меня!</button>
+        </div>
     </div>
     </div>
 
 </body>
-<!-- <script src="praktice.js"></script> -->
 
-<!-- <script src="home_work1.js"></script> -->
-<!-- <script src="home_work2.js"></script> -->
-<!-- <script src="home_work3.js"></script> -->
-<!-- <script src="home_work4.js"></script> -->
-<script src="home_work5.js"></script>
+
+<!-- <script src="js/home_work1.js"></script>
+<script src="../js/home_work2.js"></script>
+<script src="../js/home_work3.js"></script> -->
+<!-- <script src="../js/home_work4.js"></script> -->
+<script src="../js//home_work5.js"></script>
+<script></script>
 
 </html>
